# textindexer/server/controllers/default_controller.py
@@ -2,6 +2,7 @@ import connexion
 import six
 
 from textindexer.server.models.document import Document  # noqa: E501
+from textindexer.server.models.inline_object import InlineObject  # noqa: E501
 from textindexer.server.models.inline_response200 import InlineResponse200  # noqa: E501
 from textindexer.server.models.inline_response2001 import InlineResponse2001  # noqa: E501
 from textindexer.server import util
@@ -61,7 +62,7 @@ def get_indexer_v1_words(skip=None, limit=None, reverse=None):  # noqa: E501
     return 'do some magic!'
 
 
-def post_indexer_v1_document(filename=None, encoding=None, language=None, body=None):  # noqa: E501
+def post_indexer_v1_document(filename=None, encoding=None, language=None, inline_object=None):  # noqa: E501
     """post_indexer_v1_document
 
      # noqa: E501
@@ -72,9 +73,11 @@ def post_indexer_v1_document(filename=None, encoding=None, language=None, body=N
     :type encoding: str
     :param language: 
     :type language: str
-    :param body: 
-    :type body: str
+    :param inline_object: 
+    :type inline_object: dict | bytes
 
     :rtype: None
     """
+    if connexion.request.is_json:
+        inline_object = InlineObject.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
