# textindexer/server/models/__init__.py
@@ -6,6 +6,7 @@ from __future__ import absolute_import
 from textindexer.server.models.document import Document
 from textindexer.server.models.document_paragraphs import DocumentParagraphs
 from textindexer.server.models.document_sentences import DocumentSentences
+from textindexer.server.models.inline_object import InlineObject
 from textindexer.server.models.inline_response200 import InlineResponse200
 from textindexer.server.models.inline_response2001 import InlineResponse2001
 from textindexer.server.models.word import Word
