# textindexer/server/models/inline_object.py
@@ -1,0 +1,64 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from textindexer.server.models.base_model_ import Model
+from textindexer.server import util
+
+
+class InlineObject(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, document=None):  # noqa: E501
+        """InlineObject - a model defined in OpenAPI
+
+        :param document: The document of this InlineObject.  # noqa: E501
+        :type document: str
+        """
+        self.openapi_types = {
+            'document': str
+        }
+
+        self.attribute_map = {
+            'document': 'document'
+        }
+
+        self._document = document
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'InlineObject':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The inline_object of this InlineObject.  # noqa: E501
+        :rtype: InlineObject
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def document(self):
+        """Gets the document of this InlineObject.
+
+
+        :return: The document of this InlineObject.
+        :rtype: str
+        """
+        return self._document
+
+    @document.setter
+    def document(self, document):
+        """Sets the document of this InlineObject.
+
+
+        :param document: The document of this InlineObject.
+        :type document: str
+        """
+
+        self._document = document
